Export type definitions
As seen in https://github.com/kripod/react-polymorphic-types/pull/11, the `types` field needs to be exported for modern node resolution methods to work in typescript.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"author": "Kristóf Poduszló <kripod@protonmail.com>",
 	"sideEffects": false,
 	"exports": {
+		"types": "./index.d.ts",
 		"default": "./empty.js",
 		"import": "./empty.js"
 	},
